styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
@font-face {
    font-family: Battlesbridge;
    src: url(./Battlesbridge.ttf);
}

:root {
    --light: #fcfafa;
    --dark: #0e0000;
    --dark-transparent: #0e0000dd;

    --main-font: 'Pirata One', Arial, cursive;
    --text-size: 14pt;

    --navbar-size:70px;
    --container-size: 800px;

    --spacing: 8px;
    --spacing-2: calc(var(--spacing) * 2);
    --spacing-3: calc(var(--spacing) * 3);
    --spacing-4: calc(var(--spacing) * 4);

    --gold:#ffd438;
    --light-shadow: #9e8422;
    --dark-shadow: #3e2904;
}
html, body
{
    height: 100vh;
    width: 100vw;
}
body {
    background-image: url('../images/background.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    padding-top: var(--navbar-size);
}

nav {
    font-family: var(--main-font);
}
nav.navbar{
    padding:1em;
}

.dropdown, .nav-item {
    margin-right: 10px;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: var(--main-font);
    color: var(--light);
}
.logo, a.navbar-brand.logo{
    font-family: Battlesbridge;
    letter-spacing: 3px;
    color: transparent;
    height:2.25em;
    font-weight: bold;
    /* color: #f1e200; */
    /* text-shadow: 0 0 white;  */
    background-clip: text;
    -webkit-background-clip: text;
    background-image: repeating-linear-gradient(5deg, var(--gold)0%, var(--light-shadow)23%, var(--gold)31%);
    transform: scale(1);
    margin-right: 2em;
    margin-left: 1em;
    transition: all .4s;
}
_::-webkit-full-page-media, _:future, :root a.navbar-brand.logo {
   padding-top: 1.25em;
}

a.navbar-brand.logo:hover, a.navbar-brand.logo:focus{
    background-image: repeating-linear-gradient(5deg, var(--gold)0%, var(--light-shadow)10%, var(--gold)20%);
    background-position: 50px;
    color: transparent;
}

.btn:hover{
    color: #f1e200;
}

.introduction {
    background-image: url('../images/papyrus.webp');
    background-size: cover;
    background-repeat: no-repeat;
    padding: calc(var(--spacing) * 8) calc(var(--spacing) * 16);
    font-size: var(--text-size);
    height: var(--container-size);
    overflow: auto;
}

.introduction p::first-letter {
    font-family: var(--main-font);
    font-size: 2em;
}

.deep-sea {
    margin-top: -15px;
    background-size: cover;
    background-repeat: no-repeat;
    padding: 2em;
    font-size: 16pt;
    height: 1250px;
    color: var(--light);
    background-attachment: fixed;
}

.instructions {
    background-color: var(--dark-transparent);
    padding: var(--spacing);
    color: var(--light);
}
.instructions >li {
    padding-top: var(--spacing);
    padding-bottom: var(--spacing);
    border-bottom:1px solid var(--light);
}

.instructions > li::first-letter {
    font-family: var(--main-font);
    font-size: 1.2em;
}

.sparrow {
    width: 200px;
    filter: sepia(0.5);
    mix-blend-mode: multiply;
}

.compass {
    width: 150px;
    filter: sepia(1);
}

.hint {
    font-family: var(--main-font);
}

blockquote {
    font-style: italic;
    margin-top:0.5em;
}

.creator-credits {
    font-size: 15px;
    color:white;
    position:fixed;
    bottom:50%;
    left: calc(50%);
    z-index: -20;
    transform: translate(-50%,0);
}


.swal2-container.swal2-backdrop-show.win {
    background : url("../images/victory.png")!important;
    background-position: top!important;
    background-size: contain!important;
    background-repeat: no-repeat!important;
    background-color: rgba(0, 0, 0, 0.4)!important;
}
.swal2-container.swal2-backdrop-show.lose {
    background: rgb(130,9,9);
    background: radial-gradient(circle, rgba(130,9,9,0.9724264705882353) 0%, rgba(0,0,0,0.9136029411764706) 100%);
}
.dropdown{
    margin-right:1em;
}
.dropdown-item, .nav-item {
    cursor: pointer;
}
.dropdown-toggle{
    letter-spacing: 1px;
}
.nav-item {
    color:var(--light)!important;
}
.navresponsive {
    display: none;
}
.shopicon
{
    filter: invert(1);
}
.transparent-button{
    border: none;
    background: transparent;
}
button {
    cursor: pointer;
}
button:focus
{
    outline: unset;
}
@media screen and (max-width: 990px){
    .navresponsive {
        display: flex;
    }
    .navdesktop {
        display: none;
    }
   
    .navbar-nav {
        justify-content: space-between;
        align-items: flex-start;
        flex-direction: row!important;
        padding-top: 2.5em;
        padding-right: 2.5em;
    }
    .doublespeed {
        width: 33px;
    }
}
@media screen and (max-width: 767px) and (orientation: portrait) {
   
    .container-fluid {
        width: 100vh;
        height: 100vw;
        position: absolute;
        top: 100%;
        margin-top: 50px;
        transform: rotate(-90deg);
        transform-origin: left top;
        overflow: hidden;
    }

    body {
        overflow: hidden;
    }

    .swal2-container.swal2-backdrop-show {
        width: 97vh;
        height: 100vw;
        position: absolute;
        top: 100%;
        margin-top: 50px;
        transform: rotate(-90deg);
        transform-origin: left top;
        overflow-x: hidden;
    }
    .swal2-popup {
        width: fit-content;
        transform: translate(4%,0);
    }

    .map {
        width: 90vh;
        height: 98vw;
        left: 0;
        position: absolute;
        margin-top: 5px;
    }

    .dropdown{
        cursor: pointer;
    }
 
    .nav-item{
        transform: rotate(-90deg) translateX(30px); 
        transform-origin: right top; 
        cursor: pointer;
    }

    .navigation {
        opacity:0.8;
    }
    .navbar-toggler {
        margin: auto;
        border-color: transparent!important;
    }
    .navbar-brand {
        display: none;
    }

    .navbar-dark .navbar-toggler-icon {
        background-image: url('../svg/chevron-down.svg')!important;
    }
  }

